[project]
name = "ransomwarelive-mcp-server"
version = "0.1.0"
description = "An MCP server that has the ability to interact with the ransomware.live API"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "llm", "ransomware", "web", "fetch", "cti"]
license = { text = "MIT" }
dependencies = [
    "mcp",
    "httpx",
]

[project.scripts]
ransomwarelive-mcp-server = "ransomwarelive_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ransomwarelive_mcp_server"]
